--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,19 @@
             min-height: 300px;
             overflow-y: auto;
         }
+        .navbar-dark .navbar-nav .nav-link {
+            color: rgba(255, 255, 255, 1);
+            font-weight: 500;
+        }
+        .navbar-dark .navbar-nav .nav-link:hover {
+            color: rgba(255, 255, 255, 0.85);
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'presentation_list' %}">Marp プレゼンテーション</a>
+            <a class="navbar-brand" href="{% url 'list' %}">Marp プレゼンテーション</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,13 +43,19 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'presentation_list' %}">マイプレゼンテーション</a>
+                        <a class="nav-link" href="{% url 'list' %}">マイプレゼンテーション</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_presentation' %}">新規作成</a>
+                        <a class="nav-link" href="{% url 'create' %}">Markdownで作成</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admin:logout' %}">ログアウト</a>
+                        <a class="nav-link" href="{% url 'natural_language_create' %}">自然言語で作成</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'edit_template' %}">テンプレート管理</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">ログアウト</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
